# jsir

./: .bazelrc  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-jsir  bazel-jsir-export-mar-30  bazel-out  bazel-testlogs
bazel/: BUILD.bazel  extensions.bzl
docs/: dataflow_analysis.md  intermediate_representation_design.md  rfc.md
maldoca/astgen/: BUILD  OWNERS  ast_def.cc  ast_def.h  ast_def.proto  ast_from_json_printer.cc  ast_from_json_utils.h  ast_gen.cc  ast_gen.h  ast_gen_main.cc  ast_gen_test.cc  ast_serialize_printer.cc  ast_source_printer.cc  ast_to_ir_source_printer.cc  ast_to_ir_source_printer.h  ir_to_ast_source_printer.cc  ir_to_ast_source_printer.h  ir_to_ast_util.h  symbol.cc  symbol.h  type.cc  type.h  type.proto  type_test.cc
maldoca/astgen/test/: BUILD  BUILD.orig  ast_gen_test_util.cc  ast_gen_test_util.cc.orig  ast_gen_test_util.h  conversion_test_util.h
maldoca/astgen/test/assign/: BUILD  ast.generated.cc  ast_from_json.generated.cc  ast_gen_test.cc  ast_to_json.generated.cc
maldoca/astgen/test/enum/: BUILD  ast.generated.cc  ast_from_json.generated.cc  ast_gen_test.cc  ast_to_json.generated.cc
maldoca/astgen/test/lambda/: BUILD  ast.generated.cc  ast_from_json.generated.cc  ast_gen_test.cc  ast_to_json.generated.cc
maldoca/astgen/test/list/: BUILD  ast.generated.cc  ast_from_json.generated.cc  ast_gen_test.cc  ast_to_json.generated.cc
maldoca/astgen/test/multiple_inheritance/: BUILD  ast.generated.cc  ast_from_json.generated.cc  ast_gen_test.cc  ast_to_json.generated.cc  mir_ops.generated.td
maldoca/astgen/test/region/: BUILD  (+4 more)
maldoca/base/: BUILD  error_code_to_status.cc  error_code_to_status.h  error_code_to_status_test.cc  filesystem.cc  get_runfiles_dir.cc  get_runfiles_dir.h  ret_check.cc  ret_check.h  status_builder.cc  status_builder.h  status_macros.h
maldoca/base/testing/: BUILD  status_matchers.cc  status_matchers.h
maldoca/js/ast/: BUILD  ast.generated.cc  ast.generated.h  ast_from_json.generated.cc  ast_to_json.generated.cc  ast_util.cc  ast_walker.h
maldoca/js/babel/: BUILD  babel.proto  babel_internal.proto  babel_json_test.cc  babel_test.cc  scope.cc  scope.h
maldoca/js/driver/: BUILD  conversion.cc  conversion.h  conversion_test.cc  driver.cc  driver.h  driver.proto
maldoca/js/ir/: BUILD  ir.cc  jsir_attrs.td  jsir_dialect.td  jsir_gen.cc  jsir_gen_lib.cc  jsir_gen_lib.h  jsir_ops.generated.td  jsir_ops.td  jsir_utils.cc  jsir_utils.h  lit.cfg.py  trivia.cc
maldoca/js/quickjs_babel/: BUILD  native.js  quickjs_babel.cc
(+263 files in other folders)
